[project]
name = "marimo-polislike-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.23.14",
    "valency-anndata>=0.4.0",
]

[tool.uv.sources]
valency-anndata = { path = "../valency-anndata", editable = true }
